@@ -4,7 +4,6 @@
 # This is free software with ABSOLUTELY NO WARRANTY.
 # You can redistribute it and/or modify it under the terms of the GNU GPL 2.
 
-$LOAD_PATH << File.expand_path(File.dirname(__FILE__)+'/../lib')
-#require 'qwik/compat/add_load_path'
+$LOAD_PATH.unshift File.expand_path(File.dirname(__FILE__)+'/../lib')
 require 'qwik/qwik-service'
 Qwik::QwikService.main(ARGV)
