@@ -4,8 +4,7 @@
 # This is free software with ABSOLUTELY NO WARRANTY.
 # You can redistribute it and/or modify it under the terms of the GNU GPL 2.
 
-$LOAD_PATH << File.expand_path(File.dirname(__FILE__)+'/../lib')
-$LOAD_PATH << File.expand_path(File.dirname(__FILE__)+'/../ext')
-#require 'qwik/compat/add_load_path'
+$LOAD_PATH.unshift File.expand_path(File.dirname(__FILE__)+'/../lib')
+$LOAD_PATH.unshift File.expand_path(File.dirname(__FILE__)+'/../ext')
 require 'qwik/qwikweb-server'
 Qwik::QwikWebServer.main(ARGV)
